# DataStructuresStudy

./: .gitignore  CMakeLists.txt  anotacoes.txt
src/: Application.c  build-and-run.bat  lista-linear-sequencial-tests.c  lista-linear-sequencial.c  ponteiros.c
src/Helpers/: Helpers.c  Helpers.h
src/SequentialLinkedList/: SequentialLinkedList.c  SequentialLinkedList.h  SequentialLinkedListTests.c  SequentialLinkedListTests.h
